# docxwatermarker

./: CHANGELOG.md  LICENSE  README.it.md  README.md  pyproject.toml
docs/: index.html  metadata.json
examples/: 01_basic_replace.py  02_text_watermark.py  03_preset_with_pdf.py  04_personalize_for_recipient.py  05_batch_csv.py  README.md  make_sample_template.py
src/docxwatermarker/: __init__.py  _imagedetect.py  _invariants.py  _logging.py  _zipops.py  cli.py  core.py  errors.py  pdf.py  watermark.py
src/docxwatermarker/_fonts/: LICENSE-DejaVu.txt
tests/: test_cli.py  test_core.py  test_edge_cases.py  test_foundation.py  test_imagedetect.py  test_pdf.py  test_pdf_integration.py  test_spec_crossref.py  test_watermark.py  test_zipops.py
