[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docxwatermarker"
version = "0.1.0"
description = "Replace images inside .docx files while preserving page-anchored layout. Designed for per-recipient document personalization."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Fabio F.G. Buono" },
]
keywords = ["docx", "watermark", "word", "pdf", "personalization", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
docxwatermarker = "docxwatermarker.cli:main"

[project.urls]
# TODO before publishing: replace TODO with the real GitHub org/user.
Homepage = "https://github.com/TODO/docxwatermarker"
Issues = "https://github.com/TODO/docxwatermarker/issues"
Changelog = "https://github.com/TODO/docxwatermarker/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/docxwatermarker"]

[tool.hatch.build.targets.wheel.force-include]
"src/docxwatermarker/_fonts/DejaVuSans-Bold.ttf" = "docxwatermarker/_fonts/DejaVuSans-Bold.ttf"
"src/docxwatermarker/_fonts/LICENSE-DejaVu.txt" = "docxwatermarker/_fonts/LICENSE-DejaVu.txt"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
markers = [
    "requires_libreoffice: tests that need LibreOffice installed (skipped automatically if absent)",
]
